ring = executable('ring',
                sources: 'ring/ring.cpp',
                include_directories: [inc_json, inc_arbpublic, inc_arbenv, inc_arbsup],
                link_with: [arb, arbenv, arbsup])

single = executable('single',
                sources: 'single/single.cpp',
                include_directories: [inc_json, inc_arbpublic, inc_arbenv, inc_arbsup],
                link_with: [arb, arbenv, arbsup])

gap_junctions = executable('gap_junctions',
                sources: 'gap_junctions/gap_junctions.cpp',
                include_directories: [inc_json, inc_arbpublic, inc_arbenv, inc_arbsup],
                link_with: [arb, arbenv, arbsup])

generators = executable('generators',
                sources: 'generators/generators.cpp',
                include_directories: [inc_json, inc_arbpublic, inc_arbenv, inc_arbsup],
                link_with: [arb, arbenv, arbsup])

bench = executable('bench',
                sources: 'bench/bench.cpp',
                include_directories: [inc_json, inc_arbpublic, inc_arbenv, inc_arbsup],
                link_with: [arb, arbenv, arbsup])

dryrun = executable('dryrun',
                sources: 'dryrun/dryrun.cpp',
                include_directories: [inc_json, inc_arbpublic, inc_arbenv, inc_arbsup],
                link_with: [arb, arbenv, arbsup])


